--- a/sass/_card.scss
+++ b/sass/_card.scss
@@ -3,7 +3,7 @@
     align-items: center;
     justify-content: center;
     background: $off-white;
-    padding: 24px;
+    padding: 32px;
     min-height: 172px;
     box-sizing: border-box;
 
@@ -21,28 +21,42 @@
     display: flex;
     max-height: 672px;
 
-    figure {
-        padding-right: 16px;
+    figure,
+    .content {
         flex-basis: 50%;
+    }
+
+    figure {
+        margin-right: 16px;
 
         img {
-            height: 100%
+            height: 100%;
+            animation: fade-in .3s ease-in
+        }
+
+        span {
+            position: absolute;
+            top: calc(50% - 20px);
+            color: $off-white;
+            font-size: 40px;
+            outline: none;
+            cursor: pointer;
+
+            &:first-of-type {
+                left: 24px
+            }
+
+            &:last-of-type {
+                right: 24px
+            }
         }
     }
 
     .content {
-        padding: 24px;
-        flex-basis: 50%;
+        padding: 36px 36px 88px;
         background: $off-white;
         position: relative;
         box-sizing: content-box;
-
-        h3 {
-            color: $color;
-            font-size: 43px;
-            margin-top: 40px;
-            margin-bottom: 58px
-        }
 
         p {
             font-size: 20px;
@@ -52,6 +66,7 @@
 
     span {
         display: flex;
+        flex-wrap: wrap;
 
         img:not(:last-child) {
             margin-right: 52px
@@ -59,11 +74,46 @@
     }
 
     button {
-        width: 100%;
-        border: none;
         position: absolute;
         left: 0;
         bottom: 0;
-        background: $secondary
+    }
+
+    @media screen and (max-width: $tablet) {
+        flex-direction: column;
+        max-height: 100%;
+
+        figure,
+        .content {
+            flex-basis: 100%
+        }
+
+        figure {
+            margin-right: 0;
+
+            img {
+                min-height: 380px;
+                width: 100%
+            }
+        }
+
+        span {
+            img:not(:last-child) {
+                margin-right: 0
+            }
+
+            img {
+                flex-basis: 50%;
+                margin-bottom: 24px
+            }
+        }
+    }
+}
+
+.card,
+.roomCard {
+    h3 {
+        margin-top: 24px;
+        margin-bottom: 58px
     }
 }
