--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -11,7 +11,13 @@ $space-values : (0,
 64,
 72,
 80,
-88) !default;
+88,
+96,
+104,
+112,
+120,
+128,
+136) !default;
 
 // margin and padding shorthands
 $space-prefixes : (p : padding,
