--- a/sass/_theme.scss
+++ b/sass/_theme.scss
@@ -18,17 +18,13 @@
         z-index: 1
     }
 
-    img.hero {
-        height: 100vh;
-
-    }
-
     video {
-        height: calc(100vh - 136px);
+        max-height: calc(100vh - 136px);
     }
 
     img.hero,
     video {
+        min-height: 100vh;
         width: 100%;
         position: absolute;
         top: 0;
@@ -46,6 +42,7 @@
         h1 {
             color: $secondary;
             line-height: .8;
+
             &.alt {
                 color: $off-white
             }
@@ -76,17 +73,15 @@
 section {
     header {
         text-align: center;
-        padding: 168px 0;
-
-        h2 {
-            font-size: 28px;
-            font-weight: $light;
-            text-transform: uppercase;
-        }
+        padding: 148px 0;
 
         p {
             font-size: 24px;
             padding: 16px 72px;
+
+            @media screen and (max-width: $tablet) {
+                padding: 16px 0
+            }
         }
     }
 
@@ -107,5 +102,34 @@ section {
         .card {
             height: 100%
         }
+    }
+}
+
+nav.social {
+    display: flex;
+    justify-content: center;
+    margin-top: 72px;
+
+    a {
+        border-radius: 50%;
+        height: 50px;
+        width: 50px;
+
+        &:first-child {
+            margin-right: 24px
+        }
+    }
+
+    a:hover {
+        background: $color
+    }
+}
+
+.mainTitle {
+    @extend .title;
+    margin-top: 120px;
+
+    @media screen and (min-width: $laptop) {
+        width: 60%
     }
 }
