--- a/sass/_buttons.scss
+++ b/sass/_buttons.scss
@@ -25,12 +25,27 @@ button,
     font-size: 24px;
     letter-spacing: 6px;
     line-height: 1em;
+
     &:hover {
         border-color: $off-white
     }
+
     &[disabled] {
         color: rgba(0, 0, 0, .26);
         background-color: rgba(0, 0, 0, .12);
         border-color: rgba(0, 0, 0, .12);
+    }
+}
+
+.roomCard,
+form {
+    button {
+        width: 100%;
+        border: none;
+        background: $secondary;
+
+        &:hover {
+            background: $color
+        }
     }
 }
