--- a/sass/_forms.scss
+++ b/sass/_forms.scss
@@ -1,3 +1,9 @@
+form {
+    @media screen and (min-width: $laptop) {
+        padding: 0 120px;
+    }
+}
+
 label,
 input,
 select,
@@ -13,66 +19,40 @@ fieldset {
 }
 
 .formGroup {
-    margin-top: 8px;
-    margin-bottom: 8px;
-    animation: slide-out .3s ease-out
+    margin-top: 16px;
+    margin-bottom: 16px;
 }
 
 input,
 textarea,
 select {
-    background: transparent;
-    padding: .25rem 0;
+    background: $off-white;
+    padding: 16px;
     border: none;
     outline: none;
     box-shadow: none;
     border-radius: 0;
     font-family: inherit;
-    box-sizing: content-box;
+    box-sizing: border-box;
     width: 100%;
-    border-bottom: solid .15rem lighten($gray, 15%);
     transition: all .3s ease-out;
-    &:focus,
-    &.ng-dirty.ng-valid:not(.ng-pristine) {
-        border-bottom: solid .15rem $color;
+
+    &:focus {
+        border-bottom: solid .15rem $secondary;
     }
-    &.ng-touched.ng-invalid,
-    &:invalid.ng-dirty {
-        border-bottom: solid .15rem #F44336;
-    }
+
 }
 
 textarea {
     resize: none;
 }
 
-// file input
-.file-field {
-    position: relative;
-    input[type=file] {
-        // Needed to override webkit button
-        &::-webkit-file-upload-button {
-            display: none;
-        }
-        position: absolute;
-        top: 0;
-        right: 0;
-        left: 0;
-        bottom: 0;
-        width: 100%;
-        margin: 0;
-        padding: 0;
-        font-size: 20px;
-        cursor: pointer;
-        opacity: 0;
-        filter: alpha(opacity=0);
-    }
-}
+
 
 // chrome input fix
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
 input:-webkit-autofill:active {
-    -webkit-box-shadow: 0 0 0 30px $bodyGray inset !important;
+    -webkit-box-shadow: 0 0 0 30px $off-white inset !important;
 }
