--- a/sass/_grid.scss
+++ b/sass/_grid.scss
@@ -102,7 +102,7 @@
             height: 100%
         }
 
-        span {
+        figcaption {
             opacity: 0;
             display: flex;
             align-items: center;
@@ -116,7 +116,7 @@
             background: rgba($color, .8);
             font-family: 'Josefin Sans', sans-serif;
             color: $off-white;
-            font-size: 30px;
+            font-size: 24px;
             text-decoration: underline;
             text-decoration-color: $secondary;
 
