--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,5 @@
 // fonts
-@import url('https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i,700');
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans:400,400i,600,600i,700&display=swap');
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 // partials
 @import 'variables';
@@ -12,7 +12,6 @@
 @import 'forms';
 @import 'buttons';
 @import 'card';
-@import 'tiles';
 @import 'utility';
 @import 'footer';
 @import 'theme';
